# android-cmdline-jni

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
